--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
+  <script language="javascript" type="text/javascript" src="particle.js"></script>
+  <script language="javascript" type="text/javascript" src="emitter.js"></script>
+  <script language="javascript" type="text/javascript" src="ParticleObject.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </head>
 
