--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script language="javascript" type="text/javascript" src="particle.js"></script>
   <script language="javascript" type="text/javascript" src="emitter.js"></script>
   <script language="javascript" type="text/javascript" src="ParticleObject.js"></script>
+    <script language="javascript" type="text/javascript" src="smokeParticle.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 </head>
 
